--- a/src/components/ui/ContactFooter.astro
+++ b/src/components/ui/ContactFooter.astro
@@ -5,6 +5,8 @@ import LINKEDIN from "../../assets/linkedin.svg";
 import TWITTER from "../../assets/twitter_x.svg";
 import MEDIUM from "../../assets/medium.svg";
 import LEETCODE from "../../assets/leetcode.svg";
+import BEHANCE from '../../assets/behance.svg'
+import DRIBBLE from '../../assets/dribble.svg'
 
 const ICON_MAP = {
     github: GITHUB,
@@ -12,6 +14,8 @@ const ICON_MAP = {
     twitter: TWITTER,
     medium: MEDIUM,
     leetcode: LEETCODE,
+    dribble: DRIBBLE,
+    behance: BEHANCE,
 } as const;
 
 type IconName = keyof typeof ICON_MAP;
