--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,8 @@
     --primary-font: "Geist", serif;
 }
 
+
+
 .dark {
     --main-bg: #0a0a0a;
 }
@@ -17,6 +19,7 @@
 html,
 body {
     @apply bg-stone-100 dark:bg-neutral-950 text-neutral-900;
+    /* height: 100% !important; */
 }
 
 html {
