--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -11,6 +11,7 @@ import WorkExp from "./work-exp.astro";
         <h2 class="gradient-red font-extrabold text-transparent">Manikandan kalyanasundaram</h2>
         <h4 class="mb-0 mt-3">UX/UI Designer</h4>
         <p> I am a UX/UI Designer with over 2 years of experience. I am currently working at Bullet.so, a website builder that uses Notion as a CMS. </p>
+        <p>I am a Software Designer from Coimbatore and open to exploring opportunities in the future.</p>
         <ul>
             
         </ul>
